# eidos

./: .gitignore  CLAUDE.md  EIDOS_BNF.md  How the Eidos compiler adds things to theories.txt  LICENSE  LeanProps_Refactor_Design.md  README.md  What_was_in_the_Go_version.txt  create_cabal_store_zip.sh  eidos-parser.cabal  eidos-skill.skill  facts_assertions_and_metafacts.txt  implicit.txt  index.html  mereological_translation.tex  readme.MD  reflection.txt  show-theories.sh  stack.yaml  test-theories.sh  todo.txt
.github/workflows/: ci.yml  static.yml
ai_generated_docs/: CURRENT_LEAN_COQ_VALIDITY_GAPS.md  LEAN_USING_PROPS_GAPS.md  LeanProps_Refactor_Design -- Comments.md  ast_nesting.md  pipeline-map.md
app/: Main.hs
coq/: EidosRuntime.v  binary_relation.v  fol_function_one_arg.v  fol_function_two_args.v  simple.v  sol_function_one_arg.v
documentation/: How the Eidos compiler adds things to theories.txt  implicit.txt  nonstrictness_of_sorts.txt  products.txt  reflection.txt  syntax_for_relations.txt  todo.txt
eidos-haskell/: eidos-parser.cabal
eidos-haskell/src/Eidos/: FromSyntax.hs  Parser.hs
eidos-haskell/test/: Diagnostic.hs  Spec.hs
eidos-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
eidos-ui/src/: App.css  App.jsx  index.css  useEidos.js
eidos-ui/src/demo-theories/: affine_space.coh.theory  commutative_group.eq.theory  demo3.theory  examples_of_finite_fields.coh.theory  examples_of_finite_groups.coh.theory  field.coh.theory  heyting_algebra.reg.theory  ideal.eq.theory  intuitionistic_example.prop.theory  lattice.reg.theory  linear_order.coh.theory  lower_semi_lattice.reg.theory  more_complicated.theory  ordered_field.coh.theory  semigroup.eq.theory  semiring.eq.theory  shew_field.coh.theory  simple_theory.theory  theory_with_sol_functions.theory  vector_space.coh.theory
eidos-ui/src/wasm/: eidos_wasm.mjs
lean/: EidosRuntime.lean
scripts/: generate-simple-theories.sh  prepare_projects_rec.sh
simple_theories/assertion_biconditional/: assertion_biconditional.theory
simple_theories/assertion_conjunction/: assertion_conjunction.theory
simple_theories/assertion_disjunction/: assertion_disjunction.theory
simple_theories/assertion_free_prop_variable/: assertion_free_prop_variable.theory
simple_theories/assertion_implication/: assertion_implication.theory
simple_theories/assertion_negation/: assertion_negation.theory
simple_theories/binary_relation/: binary_relation.theory
simple_theories/domain_set/: domain_set.theory
simple_theories/domain_sort_min_and_max/: domain_sort_min_and_max.theory
simple_theories/existential_quantifier/: existential_quantifier.theory
simple_theories/external_file_subtheory/: base.theory  external_file_subtheory.theory
simple_theories/fact_equational/: fact_equational.theory
simple_theories/fol_function_one_arg/: fol_function_one_arg.theory
simple_theories/fol_function_two_args/: fol_function_two_args.theory
simple_theories/free_individual_variable/: free_individual_variable.theory
simple_theories/free_set_variable/: free_set_variable.theory
simple_theories/implicit_subtheory/: implicit_subtheory.theory
simple_theories/metafact_difference/: metafact_difference.theory
simple_theories/metafact_free_variable/: metafact_free_variable.theory
simple_theories/metafact_product/: metafact_product.theory
simple_theories/metafact_sum/: metafact_sum.theory
simple_theories/prop_constant/: prop_constant.theory
simple_theories/prop_min_and_max/: prop_min_and_max.theory
simple_theories/quotient/: quotient.theory
simple_theories/sol_function_one_arg/: sol_function_one_arg.theory
simple_theories/sort_qualified_equality/: sort_qualified_equality.theory
simple_theories/subquotient/: subquotient.theory
simple_theories/subsort/: subsort.theory
simple_theories/top_and_bot/: top_and_bot.theory
simple_theories/universal_quantifier/: universal_quantifier.theory
simple_theories/universe_min_and_max/: universe_min_and_max.theory
simple_theories/universe_object/: universe_object.theory
simple_theories/user_sort_min_and_max/: user_sort_min_and_max.theory
simple_theories/user_sort_set/: user_sort_set.theory
src/Eidos/: AST.hs  BuildMonad.hs  DebugIR.hs  ExternalRef.hs  FromSyntax.hs  FunctionFacts.hs  IR.hi  IR.hs  Lexer.hs  Parser.hs  Pipeline.hs  Pretty.hs  Resolution.hs  SortBounds.hs  SubLanguage.hs  TypeCheck.hs  Wasm.hs  WasmFFI.hs
src/Eidos/Check/: SubLanguage.hs  TypeCheck.hs
src/Eidos/Export/: JSON.hs  Lean.hs  LeanAxiomSet.hs  LeanExpr.hs  LeanMereo.hs  LeanProps.hs  MkAxiomSets.hs
src/Eidos/Parse/: AST.hs  Lexer.hs  Parser.hs
src/Eidos/Pipeline/: AxiomSet.hs  FunctionFacts.hs  InvokePipeline.hs  (+5 more)
test/: BasicSpec.hs  ExternalRefSpec.hs  IRSpec.hs  ImplicitSubtheoriesSpec.hs  LeanPropsGapsSpec.hs  LeanPropsSpec.hs  LeanPropsSpecFunctions.hs  Spec.hs  SubLanguageSpec.hs  TheoryCollectionSpec.hs  TypeCheckSpec.hs
theories/: abbreviations_example.theory  classical_example.prop.theory  coheyting_algebra.reg.theory  combined_mereo_and_prop.theory  combined_mereo_and_prop_with_additions.theory  combined_mereo_and_prop_with_additions_no_d.theory  commutative_monoid.eq.theory  dedekind_cut.coh.theory  demo.theory  demo3.theory  distributive_lattice.reg.theory  examples_of_finite_vector_spaces.coh.theory  ext.theory  fol_theory.fol.theory  group.eq.theory  group_action.eq.theory  heyting_algebra.reg.theory  input.theory  integral_domain.coh.theory  intuitionistic_example.prop.theory  linear_order.coh.theory  lower_semi_lattice.reg.theory  mereological_example_1.mereo.theory  mereological_example_2.mereo.theory  meta1.theory  meta2.theory  meta3.theory  modular_lattice.reg.theory  module.eq.theory  monoid.eq.theory  monoid_action.eq.theory  monoid_alternative_version.theory  more_complicated.theory  nested.theory  ordered_field.coh.theory  partial_order.reg.theory  preorder.reg.theory  semigroup.eq.theory  semiring_without_unity.eq.theory  shew_field.coh.theory  (+7 more)
wasm/: README.md  demo.mjs  eidos.wasm  eidos_wasm.mjs
wasm-app/: WasmFFI.hs  WasmMain.hs
(+61 files in other folders)
