cabal-version:      3.0
name:               eidos-parser
version:            0.1.0.0
synopsis:           EidosLang parser in Haskell
build-type:         Simple

common warnings
    ghc-options: -Wall

common deps
    build-depends:    base >=4.17 && <5

library
    import:           warnings, deps
    exposed-modules:  Eidos.Lexer
                    , Eidos.AST
                    , Eidos.Parser
                    , Eidos.FromSyntax
                    , Eidos.IR
                    , Eidos.Pretty
                    , Eidos.DebugIR
                    , Eidos.TypeCheck
                    , Eidos.ExternalRef
                    , Eidos.Export.JSON
                    , Eidos.Export.Lean
                    , Eidos.Export.LeanProps
                    , Eidos.BuildMonad 
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:    megaparsec >=9.0
                    , parser-combinators >=1.3
                    , containers
                    , directory
                    , filepath
                    , mtl
                    , aeson >=2.0
                    , aeson-pretty >=0.8 
                    , bytestring >=0.10

executable eidos-parser
    import:           warnings, deps
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:    eidos-parser
                    , megaparsec >=9.0

test-suite eidos-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: base,
                 eidos-parser,
                 hspec,
                 hspec-expectations,
                 HUnit,
                 tasty,
                 tasty-hunit,
                 tasty-expected-failure,
                 containers,
                 raw-strings-qq,
                 megaparsec
  default-language: Haskell2010


test-suite basic-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          BasicSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec

test-suite typecheck-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          TypeCheckSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    containers,
                    megaparsec

test-suite externalref-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          ExternalRefSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    temporary,
                    directory,
                    filepath

test-suite theories-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          TheoryCollectionSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    temporary,
                    directory,
                    filepath,
                    raw-strings-qq,
                    megaparsec

test-suite ir-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          IRSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    containers,
                    megaparsec

test-suite leanprops-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          LeanPropsSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec

test-suite leanprops-functions-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          LeanPropsSpecFunctions.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec
