cabal-version:      3.0
name:               eidos-parser
version:            0.1.0.0
synopsis:           EidosLang parser in Haskell
build-type:         Simple

common warnings
    ghc-options: -Wall

common deps
    build-depends:    base >=4.17 && <5

library
    import:           warnings, deps
    exposed-modules:  Eidos.Parse.Lexer
                    , Eidos.Parse.AST
                    , Eidos.Parse.Parser
                    , Eidos.FromSyntax
                    , Eidos.IR
                    , Eidos.Backend.LeanProps.LeanExpr
                    , Eidos.Print.Pretty
                    , Eidos.Print.DebugIR
                    , Eidos.Check.TypeCheck
                    , Eidos.Resolution.ExternalRef
                    , Eidos.Resolution.Resolution 
                    , Eidos.Check.SubLanguage
                    , Eidos.Print.JSON
                    , Eidos.Backend.Lean.Lean
                    , Eidos.Backend.LeanProps.LeanProps
                    , Eidos.Backend.LeanProps.LeanAxiomSet
                    , Eidos.Backend.LeanProps.MkAxiomSets
                    , Eidos.Backend.CoqProps.CoqExpr
                    , Eidos.Backend.CoqProps.CoqAxiomSet
                    , Eidos.Backend.CoqProps.MkAxiomSets
                    , Eidos.Backend.CoqProps.CoqProps
                    , Eidos.Pipeline.SortBounds
                    , Eidos.Pipeline
                    , Eidos.Pipeline.FunctionFacts
                    , Eidos.Pipeline.AxiomSet
                    , Eidos.Pipeline.MkAxiomSets
                    , Eidos.Resolution.BuildMonad
                    , Eidos.Wasm.Wasm
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:    megaparsec >=9.0
                    , parser-combinators >=1.3
                    , containers
                    , directory
                    , filepath
                    , mtl
                    , aeson >=2.0
                    , aeson-pretty >=0.8 
                    , bytestring >=0.10

executable eidos-parser
    import:           warnings, deps
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:    eidos-parser
                    , megaparsec >=9.0

test-suite eidos-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: base,
                 eidos-parser,
                 hspec,
                 hspec-expectations,
                 HUnit,
                 tasty,
                 tasty-hunit,
                 tasty-expected-failure,
                 containers,
                 raw-strings-qq,
                 megaparsec
  default-language: Haskell2010


test-suite basic-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          BasicSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec

test-suite typecheck-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          TypeCheckSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    containers,
                    megaparsec

test-suite externalref-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          ExternalRefSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    temporary,
                    directory,
                    filepath

test-suite theories-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          TheoryCollectionSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    temporary,
                    directory,
                    filepath,
                    raw-strings-qq,
                    megaparsec

test-suite ir-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          IRSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    containers,
                    megaparsec

test-suite leanprops-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          LeanPropsSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec




test-suite implicit-subtheories-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          ImplicitSubtheoriesSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec


test-suite leanprops-functions-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          LeanPropsSpecFunctions.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec

test-suite leanprops-gaps-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          LeanPropsGapsSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec

test-suite sublanguage-tests
  import:           warnings, deps
  type:             exitcode-stdio-1.0
  main-is:          SubLanguageSpec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:    eidos-parser,
                    hspec >=2.0,
                    base,
                    raw-strings-qq,
                    megaparsec
-- ---------------------------------------------------------------------------
-- Wasm executable
--
-- Build with the GHC Wasm toolchain:
--   wasm32-wasi-cabal build exe:eidos-wasm
--
-- See wasm/README.md for the full build and deployment instructions.
-- ---------------------------------------------------------------------------

executable eidos-wasm
    import:           warnings, deps
    main-is:          WasmMain.hs
    other-modules:    WasmFFI
    hs-source-dirs:   wasm-app
    default-language: GHC2021
    -- -no-hs-main: the JS host drives execution via hs_init + foreign exports.
    -- Only pass this when building for Wasm; a normal GHC build can use the
    -- trivial `main = return ()` in WasmMain.hs without this flag.
    -- ghc-options:   -no-hs-main
    build-depends:    eidos-parser
                    , containers
                    , base >=4.17 && <5
